# pyxmipp3

./: CMakeLists.txt  pyproject.toml
.github/workflows/: build-and-test.yml  release.yml
cmake/modules/: fetch_fftw3.cmake  fetch_hdf5.cmake  fetch_libjpeg.cmake  fetch_libtiff.cmake  fetch_sqlite3.cmake
src/: CMakeLists.txt
src/core/: multidim_array.cpp  rwINF.cpp
src/reconstruction/: fringe_processing.cpp
